# Mininet

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  WHITEPAPER.md  deny.toml  rust-toolchain.toml
.github/: CODEOWNERS  CODEOWNERS.template  pull_request_template.md
crates/did-mini/: Cargo.toml  README.md
crates/did-mini/src/: assurance.rs  base_device.rs  codec.rs  controller.rs  delegation.rs  duplicity.rs  error.rs  event.rs  freshness.rs  identity_mode.rs  kel.rs  lib.rs  limits.rs  witness.rs  witness_state.rs
crates/did-mini/tests/: delegation.rs  identity.rs  identity_modes.rs  pairwise.rs  recovery.rs  restore.rs
crates/mini-airdrop/: Cargo.toml
crates/mini-airdrop/src/: claim.rs  error.rs  lib.rs  registry.rs  snapshot.rs
crates/mini-bearer/: Cargo.toml  README.md
crates/mini-bearer/src/: bearer.rs  ble.rs  channel.rs  discovery.rs  error.rs  inprocess.rs  lib.rs  tcp.rs
crates/mini-bearer/tests/: channel.rs
crates/mini-bootstrap/: Cargo.toml  README.md
crates/mini-bootstrap/examples/: bootstrap_live_demo.rs
crates/mini-bootstrap/src/: lib.rs
crates/mini-bootstrap/tests/: bootstrap.rs
crates/mini-bounty/: Cargo.toml  README.md
crates/mini-bounty/src/: claim.rs  error.rs  ledger.rs  lib.rs  pool.rs
crates/mini-bridge/: Cargo.toml
crates/mini-bridge/src/: capabilities.rs  codec.rs  descriptor.rs  direct.rs  error.rs  lib.rs  pt_process.rs  transport.rs  transport_id.rs
crates/mini-bridge/tests/: pt_process_fixture.rs
crates/mini-build-runner-wasmtime/: Cargo.toml  README.md
crates/mini-build-runner-wasmtime/src/: content_store.rs  error.rs  lib.rs  limiter.rs  main.rs  random.rs  sandbox.rs
crates/mini-build-runner-wasmtime/tests/: adversarial.rs
crates/mini-build-runner-wasmtime/tests/common/: mod.rs
crates/mini-chain/: Cargo.toml  README.md
crates/mini-chain/src/: block.rs  error.rs  finality.rs  lib.rs  validator.rs  vote.rs
crates/mini-chain/tests/: finality.rs
crates/mini-cli/: Cargo.toml  README.md
crates/mini-cli/src/: build.rs  cli.rs  error.rs  identity.rs  installer.rs  json.rs  lib.rs  main.rs  pr.rs  project.rs  provenance.rs  release.rs  repo.rs  sequence.rs  store.rs  sync.rs
crates/mini-cli/tests/: adversarial_release_install.rs  cli_json_output.rs  cli_spine_commands.rs  network_sync.rs  network_sync_release.rs  no_github_outage_demo.rs  self_hosted_spine_e2e.rs  two_developers.rs
crates/mini-cli/tests/common/: mod.rs
crates/mini-consensus/: Cargo.toml
crates/mini-consensus/src/: catchup.rs  consequence.rs  error.rs  evidence.rs  lib.rs  net.rs  node.rs  round.rs  wire.rs
crates/mini-consensus/tests/: networked_consensus.rs
crates/mini-crawler/: Cargo.toml
crates/mini-crawler/src/: lib.rs
crates/mini-crdt/: Cargo.toml  README.md
crates/mini-crdt/src/: lib.rs
crates/mini-crdt/tests/: crdt.rs
crates/mini-crypto/: Cargo.toml  README.md
crates/mini-crypto/src/: aead.rs  agreement.rs  encoding.rs  error.rs  hash.rs  kdf.rs  keys.rs  lib.rs  multihash.rs  random.rs  suite.rs
crates/mini-crypto/tests/: crypto.rs
crates/mini-desktop/: Cargo.toml  README.md
crates/mini-desktop/src/: conversation_state.rs  main.rs
crates/mini-engagement/: Cargo.toml
crates/mini-engagement/src/: error.rs  lib.rs  settlement.rs  state.rs  transitions.rs
crates/mini-erasure/: Cargo.toml  README.md
crates/mini-erasure/src/: code.rs  error.rs  gf256.rs  health.rs  lib.rs  matrix.rs
crates/mini-erasure/tests/: self_healing_cycle.rs
crates/mini-execution/: Cargo.toml  README.md
crates/mini-execution/src/: body.rs  chain.rs  error.rs  lib.rs  state.rs
crates/mini-execution/tests/: end_to_end.rs
crates/mini-extract-host/: Cargo.toml
crates/mini-extract-host/src/: extractor.rs  lib.rs  main.rs
crates/mini-extract-host/tests/: host.rs
crates/mini-extract-protocol/: Cargo.toml
crates/mini-extract-protocol/src/: codec.rs  error.rs  frame.rs  lib.rs  request.rs  result.rs
crates/mini-ffi/: Cargo.toml  build.rs  uniffi-bindgen.toml  uniffi.toml
crates/mini-ffi/src/: lib.rs  lifecycle.rs  mini_ffi.udl
crates/mini-forge/: Cargo.toml  README.md
crates/mini-forge/src/: git_export.rs  governance.rs  lib.rs  oracle.rs  release.rs
crates/mini-forge/tests/: forge.rs  git_export.rs  governance.rs  release.rs
crates/mini-installer/: Cargo.toml  README.md
crates/mini-installer/src/: error.rs  event_log.rs  lib.rs
crates/mini-installer/tests/: cross_process_reconstruction.rs  event_log.rs  installer.rs
crates/mini-intake/: Cargo.toml
crates/mini-intake-types/: Cargo.toml
crates/mini-intake-types/src/: authority.rs  codec.rs  envelope.rs  error.rs  ids.rs  lib.rs  link.rs  media.rs  representation.rs  review.rs  source.rs  warning.rs
crates/mini-intake/src/: coordinator.rs  error.rs  lib.rs  media.rs
crates/mini-intake/tests/: intake.rs
crates/mini-keystone/: Cargo.toml  README.md
crates/mini-keystone/examples/: keystone.rs
crates/mini-keystone/src/: lib.rs
crates/mini-keystone/tests/: keystone.rs
crates/mini-media/: Cargo.toml  README.md
crates/mini-media/src/: lib.rs
crates/mini-media/tests/: media.rs
crates/mini-messaging/: Cargo.toml  README.md
crates/mini-messaging/src/: lib.rs
crates/mini-messaging/tests/: messaging.rs
crates/mini-net/: Cargo.toml  README.md
crates/mini-net/examples/: gossip_live_demo.rs
crates/mini-net/src/: error.rs  gossip.rs  lib.rs  peer.rs  pex.rs  routing.rs
crates/mini-net/tests/: net.rs  pex_over_tcp.rs
crates/mini-objects/: Cargo.toml  README.md
crates/mini-objects/src/: capability.rs  codec.rs  envelope_v2.rs  error.rs  lib.rs  object.rs  private_object.rs  pseudonym.rs
crates/mini-objects/tests/: objects.rs
docs/: ADDRESSING.md  AUDITOR_START.md  BETA_STATUS.md  BOOTSTRAP_AND_UPDATE.md  CONSTITUTION_REGISTRY.json  DECISION_LOG.md  DEVELOPER_START.md  FAILURE_BOOK.md  FOUNDER_DIRECTIVES.md  GOVERNANCE_PACK_INTEGRATION.md  HUMAN_START.md  INVARIANTS.md  LEGAL_DISCLAIMER.md  NAVIGATION.md  PLATFORM_PRODUCT_ARCHITECTURE.md  ROADMAP.md  STATUS.md  (+6 more)
(+353 files in other folders)
