[package]
name = "mini-bearer"
version = "0.0.1"
description = "Identity-agnostic bearer transport and an anonymous, forward-secret encrypted channel for Mininet (BLE / local Wi-Fi / relay)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
# The channel composes Mininet's own vetted primitives (X25519 + HKDF-SHA256 +
# ChaCha20-Poly1305) from mini-crypto. No direct third-party crypto here, and no
# transport framework — the bearer is a dumb pipe.
mini-crypto = { path = "../mini-crypto" }
