[package]
name = "mini-chain"
version = "0.0.1"
description = "The finality-verification core of a custom Rust chain adapting a proven Tendermint/CometBFT-style BFT design: equal validator power per verified identity root, never stake."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
mini-crypto = { path = "../mini-crypto" }
did-mini = { path = "../did-mini" }
