[package]
name = "mini-cli"
version = "0.0.1"
description = "The developer spine (D-0066, docs/design/self-hosted-forge-spine.md): a real command-line tool over did-mini/mini-forge/mini-store so a human can actually drive identity, repo, and governed-review operations without hand-writing Rust against the library API."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "mini"
path = "src/main.rs"

[dependencies]
blake3 = "1"
did-mini = { path = "../did-mini" }
fs4 = { version = "1.1.0", features = ["sync"] }
mini-bearer = { path = "../mini-bearer" }
mini-crypto = { path = "../mini-crypto" }
mini-forge = { path = "../mini-forge" }
mini-installer = { path = "../mini-installer" }
mini-media = { path = "../mini-media" }
mini-objects = { path = "../mini-objects" }
# Only for the Capability/ResourceLimits request types and the
# ExecutionRequest/ExecutionResult wire framing `mini build run` speaks to
# the real mini-build-runner-wasmtime binary over a pipe -- mini-cli never
# links mini-build-runner-wasmtime itself (D-0069's "never link Wasmtime
# outside that one crate" rule); it locates and spawns the binary as a
# real subprocess (see `crate::build::runner_binary_path`).
mini-pipeline = { path = "../mini-pipeline" }
mini-pipeline-protocol = { path = "../mini-pipeline-protocol" }
mini-provenance = { path = "../mini-provenance" }
mini-store = { path = "../mini-store" }
mini-sync = { path = "../mini-sync" }

[dev-dependencies]
mini-build-runner-wasmtime = { path = "../mini-build-runner-wasmtime" }
tempfile = "3"
