[package]
name = "mini-crypto"
version = "0.0.1"
description = "Crypto-agile primitives for Mininet: signatures, X25519 DH, ChaCha20-Poly1305 AEAD, HKDF, strong multihash, and multibase."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
# Audited, widely-used primitives. The dependency surface is kept deliberately
# small because this crate is security-critical and must stay easy to review and
# reproduce.
# Current default signature suite (RFC 8032); enable zeroize so dalek scrubs
# secret material on drop.
ed25519-dalek = { version = "2", features = ["zeroize"] }
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] } # DH for Noise-style sessions
chacha20poly1305 = "0.10" # AEAD for encrypted bearer sessions
hkdf = "0.12"         # HKDF-SHA256 for Noise-style key derivation
zeroize = "1"         # best-effort scrubbing of local secret buffers
blake3 = "1"          # default content-address hash
sha2 = "0.10"         # SHA-256, for Git-object interop (SPEC-11)
bs58 = "0.5"          # base58btc for multibase identifiers
getrandom = "0.2"     # OS CSPRNG for key generation
# FIPS 204 ML-DSA-65 — the post-quantum migration target SPEC-01 §13 already
# reserves wire tag 0x02 for (D-0095, issue #15). Feature-scoped to just the
# -65 parameter set; verify-only in this crate for now (no generation exposed
# on SigningKey yet — see suite.rs's module docs for the phased plan this
# composes rather than invents).
fips204 = { version = "0.4", default-features = false, features = ["ml-dsa-65"] }
# `rand_core::OsRng` -- the same canonical OS-backed RNG this crate's own
# Phase 1 tests already validated real `fips204` keygen/signing against
# (D-0095) -- now used in production by `SigningKey::generate_ml_dsa_65`/
# `sign_ml_dsa_65` (Phase 2, issue #15). Version pinned to match what
# `fips204` itself resolves to, so there is exactly one `rand_core` in the
# dependency graph.
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

[dev-dependencies]
# Adds fips204's OS-RNG keygen/sign convenience (`default-rng`) for this
# crate's own round-trip tests only — dev-dependency features never reach a
# `cargo build`/`cargo build --release` production artifact.
fips204 = { version = "0.4", default-features = false, features = ["ml-dsa-65", "default-rng"] }
