[package]
name = "mini-desktop"
version = "0.0.1"
description = "Sovereignty-first Windows desktop reference client shell for Mininet."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "mininet-desktop"
path = "src/main.rs"

[dependencies]
# Keep the renderer explicit: no persistence, webbrowser, web screen reader,
# or optional platform integration is pulled into the reference shell.
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
did-mini = { path = "../did-mini" }
mini-objects = { path = "../mini-objects" }
mini-media = { path = "../mini-media" }
mini-messaging = { path = "../mini-messaging" }
mini-bearer = { path = "../mini-bearer" }
mini-sync = { path = "../mini-sync" }
mini-social = { path = "../mini-social" }
mini-store = { path = "../mini-store" }
mini-windows-vault = { path = "../mini-windows-vault" }
