[package]
name = "mini-erasure"
version = "0.0.1"
description = "Systematic Reed-Solomon erasure coding over GF(2^8), coded in-house from the standard published construction (RFC 5510 / the same field used by QR codes and RAID6), plus a self-healing repair layer -- closes roadmap #30 (erasure coding & replication strategy) and #32 (self-healing storage design)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
blake3 = "1"
