[package]
name = "mini-forge"
version = "0.0.1"
description = "The forge core: content-addressed repos (blob/tree/commit), branch heads, and the release registry with independent build attestations — how Mininet updates itself. No forced update, no kill path."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
mini-crypto = { path = "../mini-crypto" }
did-mini = { path = "../did-mini" }
mini-objects = { path = "../mini-objects" }
mini-store = { path = "../mini-store" }
mini-media = { path = "../mini-media" }

[dev-dependencies]
mini-crdt = { path = "../mini-crdt" }
