[package]
name = "mini-messaging"
version = "0.0.1"
description = "Encrypted private-message objects and conversation reads for Mininet."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
did-mini = { path = "../did-mini" }
mini-crypto = { path = "../mini-crypto" }
mini-objects = { path = "../mini-objects" }
mini-store = { path = "../mini-store" }
